--- a/index.html
+++ b/index.html
@@ -29,6 +29,9 @@
 
         <!-- sezione banner top -->
         <section>
+            <div class="banner">
+                
+            </div>
 
         </section>
     </header>
