--- a/index.html
+++ b/index.html
@@ -30,10 +30,58 @@
         <!-- sezione banner top -->
         <section>
             <div class="banner">
-                
-            </div>
 
+            </div>
         </section>
     </header>
+
+    <!-- main  -->
+    <main>
+        <section>
+            <div class="sfondo">
+                <!-- blocchi text + img -->
+             <div class="img-home">
+
+                </div>
+
+                <div class="testo">
+
+                </div>
+
+                 </div>
+        </section>
+
+        <!-- blocco reverse -->
+        <section class="grey">
+            <div class="sfondo reverse">
+                <!-- blocchi text + img -->
+             <div class="img-home">
+
+                </div>
+
+                <div class="testo">
+
+                </div>
+
+                 </div>
+        </section>
+
+        <!-- 3 blocco -->
+        <section>
+            <div class="sfondo">
+                <!-- blocchi text + img -->
+             <div class="img-home">
+
+                </div>
+
+                <div class="testo">
+
+                </div>
+
+                 </div>
+        </section>
+
+
+    </main>
 </body>
 </html>
