--- a/index.html
+++ b/index.html
@@ -81,6 +81,14 @@
                  </div>
         </section>
 
+        <!-- blocco pre footer -->
+        <section class="grey ">
+            <div id="banner-bot">
+
+            </div>
+            
+        </section>
+
 
     </main>
 </body>
