--- a/index.html
+++ b/index.html
@@ -82,14 +82,15 @@
         </section>
 
         <!-- blocco pre footer -->
-        <section class="grey ">
+        <section class="grey sfondo-section ">
             <div id="banner-bot">
 
             </div>
-            
         </section>
 
 
+
     </main>
+
 </body>
 </html>
