add footer e fine esercizio

--- a/index.html
+++ b/index.html
@@ -92,5 +92,36 @@
 
     </main>
 
+    <!-- footer -->
+    <footer>
+        <!-- sezione link e nav -->
+        <section class="flex-footer">
+            <div class="col-foot" id="col-main">
+
+            </div>
+            <div class="col-foot">
+
+            </div>
+            <div class="col-foot">
+
+            </div>
+            <div class="col-foot">
+
+            </div>
+            <div class="col-foot">
+
+            </div>
+
+        </section>
+        <!-- sezione social -->
+        <section class="social">
+            <div id="pie-pagina">
+
+            </div>
+
+        </section>
+
+    </footer>
+
 </body>
 </html>
